testdata/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: httpd
  labels:
    app: httpd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpd
  template:
    metadata:
      labels:
        app: httpd
    spec:
      containers:
      - name: httpd
        image: centos/httpd-24-centos7
