testdata/namespace-egress-isolated.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: egress-isolated
  labels:
    app: egress-isolated
spec:
  finalizers:
  - kubernetes
