testdata/namespace-eve.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: eve
  labels:
    app: eve
spec:
  finalizers:
  - kubernetes
