testdata/namespace-global.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: global
  labels:
    app: global
spec:
  finalizers:
  - kubernetes
