testdata/namespace-ingress-isolated-whitelist.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: ingress-isolated-whitelist
  labels:
    app: ingress-isolated-whitelist
spec:
  finalizers:
  - kubernetes
