testdata/namespace-ingress-isolated.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: ingress-isolated
  labels:
    app: ingress-isolated
spec:
  finalizers:
  - kubernetes
