testdata/namespace-isolated.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: isolated
  labels:
    app: isolated
spec:
  finalizers:
  - kubernetes
