testdata/network-policy-egress-isolated.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  name: egress-isolated
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress: []
