testdata/network-policy-ingress-isolated.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-isolated
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress: []
