testdata/network-policy-isolated.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  name: isolated
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress: []
  egress: []
