testdata/pod-alice.yaml
apiVersion: v1
kind: Pod
metadata:
  name: httpd-alice
  labels:
    app: httpd-alice
spec:
  containers:
  - name: httpd
    image: centos/httpd-24-centos7
    ports:
    - containerPort: 8080
