testdata/pod-bob.yaml
apiVersion: v1
kind: Pod
metadata:
  name: httpd-bob
  labels:
    app: httpd-bob
spec:
  containers:
  - name: httpd
    image: centos/httpd-24-centos7
    ports:
    - containerPort: 8080
