testdata/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: httpd
  labels:
    app: httpd
spec:
  containers:
  - name: httpd
    image: centos/httpd-24-centos7
    ports:
    - containerPort: 8080
